--- a/tooling/cli/src/test/resources/org/apache/isis/tooling/cli/test/isis-tooling.yml
+++ b/tooling/cli/src/test/resources/org/apache/isis/tooling/cli/test/isis-tooling.yml
@@ -41,17 +41,20 @@ commands:
       Bypass: "org.apache.isis.security:isis-security-bypass.*"
       Keycloak: "org.apache.isis.security:isis-security-keycloak.*"
       Shiro: "org.apache.isis.security:isis-security-shiro.*"
+      Spring: "org.apache.isis.security:isis-security-spring.*"
 
       Viewer: org.apache.isis.viewer
+      "Common": "org.apache.isis.viewer:isis-viewer-common.*"
       "Restful Objects": "org.apache.isis.viewer:isis-viewer-restfulobjects.*"
       Wicket: "org.apache.isis.viewer:isis-viewer-wicket.*"
 
       Valuetypes: org.apache.isis.valuetypes.*
       "Asciidoc": "org.apache.isis.valuetypes:isis-valuetypes-asciidoc.*"
       "Markdown": "org.apache.isis.valuetypes:isis-valuetypes-markdown.*"
-      "SSE": "org.apache.isis.valuetypes:isis-valuetypes-ssec.*"
+      "SSE": "org.apache.isis.valuetypes:isis-valuetypes-sse.*"
 
       Extensions: org.apache.isis.extensions
+      "Applib: Excel": "org.apache.isis.extensions:isis-extensions-excel.*"
       "Core: Command Log": "org.apache.isis.extensions:isis-extensions-command-log.*"
       "Core: Command Replay": "org.apache.isis.extensions:isis-extensions-command-replay.*"
       #"Core: Flyway": "org.apache.isis.extensions:isis-extensions-flyway.*"
@@ -66,25 +69,14 @@ commands:
       #"Wicket Viewer: Gmap3": "org.apache.isis.security:isis-extensions-gmap3.*"
       "Wicket Viewer: Pdf.js": "org.apache.isis.security:isis-extensions-fullcalendar.*"
 
-      Subdomains: org.apache.isis.subdomains
-      "Base": "org.apache.isis.subdomains:isis-subdomains-base.*"
-      #"docx": "org.apache.isis.subdomains:isis-subdomains-docx.*"
-      "Excel": "org.apache.isis.subdomains:isis-subdomains-excel.*"
-      #"Freemarker": "org.apache.isis.subdomains:isis-subdomains-freemarker.*"
-      #"OGNL": "org.apache.isis.subdomains:isis-subdomains-ognl.*"
-      #"PDF Box": "org.apache.isis.subdomains:isis-subdomains-pdfbox.*"
-      "Spring": "org.apache.isis.subdomains:isis-subdomains-spring.*"
-      "XDocReport": "org.apache.isis.subdomains:isis-subdomains-xdocreport.*"
-      #"Zip": "org.apache.isis.subdomains:isis-subdomains-zip.*"
-
       "Tooling": org.apache.isis.tooling.*
       "Regression Tests": org.apache.isis.regressiontests.*
 
       Incubator: org.apache.isis.incubator
       "Kroviz Client": "org.apache.isis.incubator.clients:isis-client-kroviz.*"
-      "JavaFX Viewer": "org.apache.isis.incubator.viewer:isis-viewer-javafx.*"
+      "GraphQL Viewer": "org.apache.isis.incubator.viewer:isis-viewer-graphql.*"
       "Vaadin Viewer": "org.apache.isis.incubator.viewer:isis-viewer-vaadin.*"
-
+      "JavaFX Viewer": "org.apache.isis.incubator.viewer:isis-viewer-javafx.*"
 
   index:
 
