ISIS-3001: fixes antora.yml for moved module

--- a/antora/playbooks/site.yml
+++ b/antora/playbooks/site.yml
@@ -109,7 +109,7 @@ content:
       branches: HEAD
 
     - url: .
-      start_path: extensions/excel/adoc # extensions
+      start_path: extensions/applib/excel/adoc # extensions
       branches: HEAD
     - url: .
       start_path: extensions/core/command-log/adoc # extensions
