ISIS-2998: enable nightly build of maven artifacts

--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -2,9 +2,9 @@ name: Apache Isis Nightly Build
 
 on:
   workflow_dispatch:
-  #schedule:
-    ## daily 02:00 (UTC) in the morning
-    #- cron: '0 2 * * *'
+  schedule:
+    # daily 02:00 (UTC) in the morning
+    - cron: '0 2 * * *'
 
 jobs:
   build:
