ISIS-3010: extensions: enable DN enhancer JPA annot. processing
- only kicks in when ${basedir}/logging-dn-enhance.properties exists

- DN enhance must not run when entities are meant to be managed by
EclipseLink instead

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1055,6 +1055,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.datanucleus</groupId>
+				<artifactId>datanucleus-api-jpa</artifactId>
+				<version>${datanucleus-api-jpa.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.datanucleus</groupId>
 				<artifactId>datanucleus-core</artifactId>
 				<version>${datanucleus-core.version}</version>
 			</dependency>
@@ -1543,6 +1548,11 @@
 								<groupId>org.datanucleus</groupId>
 								<artifactId>datanucleus-api-jdo</artifactId>
 								<version>${datanucleus-api-jdo.version}</version>
+							</dependency>
+							<dependency>
+								<groupId>org.datanucleus</groupId>
+								<artifactId>datanucleus-api-jpa</artifactId>
+								<version>${datanucleus-api-jpa.version}</version>
 							</dependency>
 							<dependency>
 								<groupId>org.datanucleus</groupId>
