--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -75,7 +75,7 @@ under the License.
 	<name>Apache Isis</name>
 	<description>
 		Apache Isis Bill of Material (BOM).
-		Also the parent POM for the core framework, extensions and starter apps.
+		Also the parent POM for the core framework and extensions.
 	</description>
 
     <url>https://isis.apache.org</url>
@@ -364,6 +364,7 @@ under the License.
 		<danhaywood-java-testsupport.version>1.0.0</danhaywood-java-testsupport.version>
 
 		<datanucleus-api-jdo.version>6.0.0-m4</datanucleus-api-jdo.version>
+		<datanucleus-api-jpa.version>6.0.0-m4</datanucleus-api-jpa.version>
 		<datanucleus-core.version>6.0.0-m4</datanucleus-core.version>
 		<datanucleus-jdo-api.version>3.2.0-release</datanucleus-jdo-api.version>
 		<datanucleus-jdo-query.version>6.0.0-m1</datanucleus-jdo-query.version>
