ISIS-3010: provide concrete CommandJdo/Jpa (reverting JPA annotation experiments)

--- a/extensions/core/command-log/applib/pom.xml
+++ b/extensions/core/command-log/applib/pom.xml
@@ -65,6 +65,11 @@
             <groupId>org.apache.isis.core</groupId>
             <artifactId>isis-core-runtimeservices</artifactId>
         </dependency>
+        
+		<dependency>
+		    <groupId>org.datanucleus</groupId>
+		    <artifactId>javax.jdo</artifactId>
+		</dependency>
 
         <!-- Testing -->
 
