--- a/examples/demo/domain/src/main/resources/application.yml
+++ b/examples/demo/domain/src/main/resources/application.yml
@@ -107,7 +107,7 @@ isis:
 # schema auto creation etc. ...
   persistence:
     schema:
-       autoCreateSchemas: isisExtensionsSecman,demo
+       autoCreateSchemas: isisExtensionsSecman,isisExtensionsCommandLog,demo
 
   extensions:
     secman:
