--- a/mavendeps/webapp/pom.xml
+++ b/mavendeps/webapp/pom.xml
@@ -28,7 +28,7 @@
 	<name>Apache Isis Maven Deps - Webapp</name>
 	<description>
         Defines a module that can be almost used as a single dependency for running
-        an Apache Isis webapp (Wicket, Restful Objects and Shiro security).
+        an Apache Isis webapp (Wicket, Restful Objects, GraphQL and Shiro security).
 
         Note: Also requires a persistence provider.
     </description>
