--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,7 @@
 			</activation>
 			<modules>
 				<!-- prerequisites ... -->
+				<module>examples/demo/domain</module>
 				<module>incubator/viewers/javafx</module>
 
 				<module>examples/demo/javafx</module>
@@ -207,6 +208,7 @@
 			</activation>
 			<modules>
 				<!-- prerequisites ... -->
+				<module>examples/demo/domain</module>
 				<module>incubator/viewers/vaadin</module>
 				<module>examples/demo/domain</module>
 				<module>examples/demo/web</module>
@@ -229,6 +231,18 @@
 				<module>incubator/clients/kroviz</module>
 				<module>incubator/viewers/javafx</module>
 				<module>incubator/viewers/vaadin</module>
+			</modules>
+		</profile>
+
+		<profile>
+			<id>module-incubator-graphql</id>
+			<activation>
+				<property>
+					<name>module-incubator-graphql</name>
+				</property>
+			</activation>
+			<modules>
+				<module>incubator/viewers/graphql</module>
 			</modules>
 		</profile>
 
