--- a/incubator/viewers/graphql/pom.xml
+++ b/incubator/viewers/graphql/pom.xml
@@ -69,6 +69,11 @@
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 
+			<dependency>
+				<groupId>org.apache.isis.testing</groupId>
+				<artifactId>isis-testing-fixtures-applib</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.springframework.graphql</groupId>
