--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -45,7 +45,7 @@ under the License.
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.6</version>
+		<version>2.6.7</version>
 		<relativePath/>
 	</parent>
 
@@ -410,7 +410,7 @@ under the License.
 		<log4jdbc-remix.version>0.2.7</log4jdbc-remix.version>
 
 		<maven-eclipse-plugin.version>2.10</maven-eclipse-plugin.version>
-		<maven-release-plugin.version>3.0.0-M5</maven-release-plugin.version>		<!-- See https://nodejs.org/en/download/ for latest node and npm (lts) versions -->
+		<maven-release-plugin.version>3.0.0-M5</maven-release-plugin.version>
 		<maven-war-plugin.version>3.3.2</maven-war-plugin.version>
 
 		<!-- See https://nodejs.org/en/download/ for latest node and npm (lts)
@@ -433,7 +433,7 @@ under the License.
 		<shiro.version>1.9.0</shiro.version>
 		<simpleslackapi.version>1.3.0</simpleslackapi.version>
 		<slf4j-api.version>1.7.36</slf4j-api.version> <!-- also provided by spring-boot-starter-logging, needed to solve convergence issues -->
-		<spring-boot.version>2.6.6</spring-boot.version> <!-- has no effect here, needs to be set in bom/pom.xml -->
+		<spring-boot.version>2.6.7</spring-boot.version> <!-- has no effect here, needs to be set in bom/pom.xml -->
 		<summernote.version>0.8.11</summernote.version>
 		<swagger-core.version>1.6.6</swagger-core.version>
 
@@ -609,7 +609,7 @@ under the License.
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
-                    <version>3.0.0-M5</version>
+                    <version>${maven-release-plugin.version}</version>
 					<configuration>
 						<useReleaseProfile>false</useReleaseProfile>
 						<goals>deploy</goals>
