--- a/incubator/viewers/graphql/applib/pom.xml
+++ b/incubator/viewers/graphql/applib/pom.xml
@@ -25,8 +25,8 @@
 	<name>Apache Isis Inc - Viewer GraphQL (Applib)</name>
 
 	<properties>
-		<jar-plugin.automaticModuleName>org.apache.isis.incubator.viewer.graphql.model</jar-plugin.automaticModuleName>
-		<git-plugin.propertiesDir>org/apache/isis/incubator/viewer/graphql/model</git-plugin.propertiesDir>
+		<jar-plugin.automaticModuleName>org.apache.isis.incubator.viewer.graphql.applib</jar-plugin.automaticModuleName>
+		<git-plugin.propertiesDir>org/apache/isis/incubator/viewer/graphql/applib</git-plugin.propertiesDir>
 	</properties>
 
 	<dependencies>
