--- a/core/pom.xml
+++ b/core/pom.xml
@@ -675,6 +675,12 @@
 				<version>2.0.0-SNAPSHOT</version>
 				<type>pom</type>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.testing</groupId>
+				<artifactId>isis-testing</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+				<type>pom</type>
+			</dependency>
 
 			<!-- THIRD PARTY DEPENDENCIES -->
 
