--- a/extensions/core/command-log/applib/pom.xml
+++ b/extensions/core/command-log/applib/pom.xml
@@ -71,19 +71,21 @@
 		    <artifactId>javax.jdo</artifactId>
 		</dependency>
 
-        <!-- Testing -->
-
-        <dependency>
-	    	<groupId>org.apache.isis.testing</groupId>
-        	<artifactId>isis-testing-unittestsupport-applib</artifactId>
+        <!-- TESTING -->
+		
+		<dependency>
+			<groupId>org.apache.isis.mavendeps</groupId>
+			<artifactId>isis-mavendeps-unittests</artifactId>
+			<type>pom</type>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-	    	<groupId>org.apache.isis.testing</groupId>
-        	<artifactId>isis-testing-integtestsupport-applib</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.isis.mavendeps</groupId>
+			<artifactId>isis-mavendeps-integtests</artifactId>
+			<type>pom</type>
             <scope>test</scope>
-        </dependency>
+		</dependency>
 
     </dependencies>
 
