ISIS-2947: graph-ql: revert lombok-ification (prev. commit)

--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,7 @@
 			<modules>
 				<module>valuetypes/asciidoc/ui/vaadin</module>
 				<module>incubator/clients/kroviz</module>
+				<module>incubator/viewers/graphql</module>
 				<module>incubator/viewers/javafx</module>
 				<module>incubator/viewers/vaadin</module>
 			</modules>
