ISIS-2445: vaa: don't gitignore 'frontend', ignore 'generated' instead
- fixes build module-all

--- a/incubator/viewers/graphql/viewer/pom.xml
+++ b/incubator/viewers/graphql/viewer/pom.xml
@@ -29,6 +29,14 @@
 		<git-plugin.propertiesDir>org/apache/isis/incubator/viewer/graphql/viewer</git-plugin.propertiesDir>
 	</properties>
 
+	<build>
+		<testResources>
+			<testResource>
+				<directory>src/test/java</directory>
+				<filtering>false</filtering>
+			</testResource>
+		</testResources>
+	</build>
 	<dependencies>
 
 		<dependency>
