--- a/incubator/viewers/vaadin/.gitignore
+++ b/incubator/viewers/vaadin/.gitignore
@@ -4,7 +4,7 @@ drivers/
 error-screenshots/
 # More Node stuff as introduced with Vaadin
 node/
-frontend/
+generated
 package-lock.json
 package.json
 webpack.config.js
