--- a/examples/demo/javafx/pom.xml
+++ b/examples/demo/javafx/pom.xml
@@ -136,10 +136,9 @@
 		<!-- INTEGRATION TESTING -->
 		
 		<dependency>
-			<groupId>org.apache.isis.mavendeps</groupId>
-			<artifactId>isis-mavendeps-integtests</artifactId>
+			<groupId>org.apache.isis.testing</groupId>
+			<artifactId>isis-testing-integtestsupport-applib</artifactId>
 			<scope>test</scope>
-			<type>pom</type>
 		</dependency>
 
 		<!-- OTHER DEPENDENCIES -->
