--- a/extensions/applib/excel/integtests/pom.xml
+++ b/extensions/applib/excel/integtests/pom.xml
@@ -95,13 +95,18 @@ under the License.
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.isis.mavendeps</groupId>
-            <artifactId>isis-mavendeps-integtests</artifactId>
-            <type>pom</type>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>org.apache.isis.testing</groupId>
+			<artifactId>isis-testing-integtestsupport-applib</artifactId>
+			<scope>test</scope>
+		</dependency>
 
+		<dependency>
+			<groupId>org.apache.isis.testing</groupId>
+			<artifactId>isis-testing-fixtures-applib</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
 		<!-- PERSISTENCE -->
 
         <dependency>
