--- a/extensions/core/command-log/jdo/pom.xml
+++ b/extensions/core/command-log/jdo/pom.xml
@@ -68,10 +68,9 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.apache.isis.mavendeps</groupId>
-			<artifactId>isis-mavendeps-integtests</artifactId>
-			<type>pom</type>
-            <scope>test</scope>
+			<groupId>org.apache.isis.testing</groupId>
+			<artifactId>isis-testing-integtestsupport-applib</artifactId>
+			<scope>test</scope>
 		</dependency>
 
     </dependencies>
