ISIS-2843: Remove mavendeps 'unittests'.

--- a/incubator/viewers/graphql/viewer/pom.xml
+++ b/incubator/viewers/graphql/viewer/pom.xml
@@ -63,9 +63,8 @@
 		<!-- TESTING -->
 
 		<dependency>
-			<groupId>org.apache.isis.mavendeps</groupId>
-			<artifactId>isis-mavendeps-unittests</artifactId>
-			<type>pom</type>
+			<groupId>org.apache.isis.testing</groupId>
+			<artifactId>isis-testing-unittestsupport-applib</artifactId>
 			<scope>test</scope>
 		</dependency>
 
