--- a/core/pom.xml
+++ b/core/pom.xml
@@ -658,10 +658,9 @@
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
-				<groupId>org.apache.isis.mavendeps</groupId>
-				<artifactId>isis-mavendeps-unittests</artifactId>
+				<groupId>org.apache.isis.testing</groupId>
+				<artifactId>isis-testing-unittestsupport-applib</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
-				<type>pom</type>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.isis.testing</groupId>
