--- a/extensions/vw/fullcalendar/wkt-integr/pom.xml
+++ b/extensions/vw/fullcalendar/wkt-integr/pom.xml
@@ -68,6 +68,19 @@
         	<groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
+        
+     	<dependency>
+		    <groupId>org.webjars</groupId>
+			<artifactId>fullcalendar</artifactId>
+			<version>5.10.2</version>
+		</dependency>
+		
+<!-- these are sources only, cannot use -->		
+<!-- 		<dependency> -->
+<!-- 		    <groupId>org.webjars.bowergithub.fullcalendar</groupId> -->
+<!-- 		    <artifactId>fullcalendar</artifactId> -->
+<!-- 		    <version>5.11.0</version> -->
+<!-- 		</dependency> -->
 
 		<!-- TESTING -->
 
