--- a/extensions/vw/fullcalendar/wkt-integr/pom.xml
+++ b/extensions/vw/fullcalendar/wkt-integr/pom.xml
@@ -72,6 +72,7 @@
      	<dependency>
 		    <groupId>org.webjars</groupId>
 			<artifactId>fullcalendar</artifactId>
+			<!--  keep in sync with o.a.i.extensions.fullcalendar.wkt.fullcalendar.res.FullCalendar*Reference -->
 			<version>5.10.2</version>
 		</dependency>
 		
