ISIS-3040: reorg. project structure
- pdf.js and fullcalendar: gather the wicket specific sub artifacts in
their own container artifact (wicket)

--- a/extensions/vw/fullcalendar/pom.xml
+++ b/extensions/vw/fullcalendar/pom.xml
@@ -37,8 +37,7 @@
 
     <modules>
         <module>applib</module>
-        <module>wkt-integr</module>
-        <module>wkt-vwr</module>
+        <module>wicket</module>
     </modules>
 
 </project>
