--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -152,7 +152,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
-				<artifactId>isis-extensions-pdfjs-ui</artifactId>
+				<artifactId>isis-extensions-pdfjs-wicket-ui</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 
@@ -163,12 +163,17 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
-				<artifactId>isis-extensions-fullcalendar-wkt-integr</artifactId>
+				<artifactId>isis-extensions-fullcalendar-wicket</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
-				<artifactId>isis-extensions-fullcalendar-wkt-viewer</artifactId>
+				<artifactId>isis-extensions-fullcalendar-wicket-integration</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.extensions</groupId>
+				<artifactId>isis-extensions-fullcalendar-wicket-ui</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 
