--- a/extensions/vw/pdfjs/wicket/ui/pom.xml
+++ b/extensions/vw/pdfjs/wicket/ui/pom.xml
@@ -22,17 +22,16 @@
 
     <parent>
         <groupId>org.apache.isis.extensions</groupId>
-        <artifactId>isis-extensions-fullcalendar</artifactId>
+        <artifactId>isis-extensions-pdfjs-wicket</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>isis-extensions-fullcalendar-wkt-integr</artifactId>
-    <name>Apache Isis Ext - FullCalendar - Wicket Integration</name>
-    <description>Integrates fullcalendar.io with Wicket</description>
+    <artifactId>isis-extensions-pdfjs-wicket-ui</artifactId>
+    <name>Apache Isis Ext - pdf.js - Wicket Viewer (UI)</name>
 
     <properties>
-        <jar-plugin.automaticModuleName>org.apache.isis.extensions.fullcalendar.ui</jar-plugin.automaticModuleName>
-        <git-plugin.propertiesDir>org/apache/isis/extensions/fullcalendar/ui</git-plugin.propertiesDir>
+        <jar-plugin.automaticModuleName>org.apache.isis.extensions.pdfjs.wicket.ui</jar-plugin.automaticModuleName>
+        <git-plugin.propertiesDir>org/apache/isis/extensions/pdfjs/wicket/ui</git-plugin.propertiesDir>
     </properties>
 
 	<build>
@@ -56,41 +55,13 @@
 
         <dependency>
             <groupId>org.apache.isis.extensions</groupId>
-            <artifactId>isis-extensions-fullcalendar-applib</artifactId>
+            <artifactId>isis-extensions-pdfjs-metamodel</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.apache.isis.viewer</groupId>
             <artifactId>isis-viewer-wicket-ui</artifactId>
         </dependency>
-        
-        <dependency>
-        	<groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-        </dependency>
-        
-     	<dependency>
-		    <groupId>org.webjars</groupId>
-			<artifactId>fullcalendar</artifactId>
-			<!--  keep in sync with o.a.i.extensions.fullcalendar.wkt.fullcalendar.res.FullCalendar*Reference -->
-			<version>5.10.2</version>
-		</dependency>
-		
-<!-- these are sources only, cannot use -->		
-<!-- 		<dependency> -->
-<!-- 		    <groupId>org.webjars.bowergithub.fullcalendar</groupId> -->
-<!-- 		    <artifactId>fullcalendar</artifactId> -->
-<!-- 		    <version>5.11.0</version> -->
-<!-- 		</dependency> -->
-
-		<!-- TESTING -->
-
-        <dependency>
-            <groupId>org.apache.isis.testing</groupId>
-            <artifactId>isis-testing-unittestsupport-applib</artifactId>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
 
 </project>
