--- a/extensions/vw/pdfjs/applib/pom.xml
+++ b/extensions/vw/pdfjs/applib/pom.xml
@@ -37,15 +37,13 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.apache.isis.commons</groupId>
+            <artifactId>isis-commons</artifactId>
+        </dependency>
+        
+        <dependency>
             <groupId>org.apache.isis.core</groupId>
             <artifactId>isis-applib</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>de.agilecoders.wicket</groupId>
-            <artifactId>wicket-bootstrap-core</artifactId>
-            <!-- to avoid polluting the classpath -->
-            <optional>true</optional>
         </dependency>
 
     </dependencies>
