--- a/extensions/vw/pdfjs/wicket/integration/pom.xml
+++ b/extensions/vw/pdfjs/wicket/integration/pom.xml
@@ -58,6 +58,14 @@
 			<artifactId>isis-viewer-wicket-ui</artifactId>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.webjars.bowergithub.mozilla</groupId>
+		    <artifactId>pdfjs-dist</artifactId>
+		    <!--  keep in sync with o.a.i.extensions.pdfjs.wkt.integration.res.PdfJs*Reference -->
+		    <version>1.10.100</version>
+<!-- 		    <version>2.9.359</version> -->
+		</dependency>
+		
 	</dependencies>
 
 </project>
