--- a/extensions/vw/pdfjs/wicket/integration/pom.xml
+++ b/extensions/vw/pdfjs/wicket/integration/pom.xml
@@ -59,11 +59,17 @@
 		</dependency>
 		
 		<dependency>
-		    <groupId>org.webjars.bowergithub.mozilla</groupId>
+		    <groupId>org.webjars.npm</groupId>
 		    <artifactId>pdfjs-dist</artifactId>
 		    <!--  keep in sync with o.a.i.extensions.pdfjs.wkt.integration.res.PdfJs*Reference -->
-<!-- 		    <version>1.10.100</version> -->
-			<version>2.9.359</version>
+		    <version>2.13.216</version>
+		</dependency>
+
+		<!-- pdfjs v1 legacy -->		
+		<dependency>
+		    <groupId>org.webjars.bowergithub.mozilla</groupId>
+		    <artifactId>pdfjs-dist</artifactId>
+		    <version>1.10.100</version>
 		</dependency>
 		
 	</dependencies>
