--- a/extensions/vw/pdfjs/wicket/integration/pom.xml
+++ b/extensions/vw/pdfjs/wicket/integration/pom.xml
@@ -61,11 +61,11 @@
 		<dependency>
 		    <groupId>org.webjars.npm</groupId>
 		    <artifactId>pdfjs-dist</artifactId>
-		    <!--  keep in sync with o.a.i.extensions.pdfjs.wkt.integration.res.PdfJs*Reference -->
+		    <!--  keep in sync with o.a.i.extensions.pdfjs.wkt.integration.PdfJsVersion -->
 		    <version>2.13.216</version>
 		</dependency>
 
-		<!-- pdfjs v1 legacy -->		
+		<!-- pdf.js v1 legacy -->		
 		<dependency>
 		    <groupId>org.webjars.bowergithub.mozilla</groupId>
 		    <artifactId>pdfjs-dist</artifactId>
