--- a/core/maven-plugin/pom.xml
+++ b/core/maven-plugin/pom.xml
@@ -56,6 +56,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
+                <version>3.6.4</version>
                 <configuration>
                     <goalPrefix>configurator</goalPrefix>
                 </configuration>
