ISIS-2651: adds support for datanucleus.schema.generate-database.mode
and additional docs for JDO/JPA

--- a/core/config/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/core/config/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -166,6 +166,23 @@
           "value": "None"
         }
       ]
+    },
+    {
+      "name": "datanucleus.schema.generatedatabase.mode",
+      "values": [
+        {
+          "value": "none"
+        },
+        {
+          "value": "create"
+        },
+        {
+          "value": "drop-and-create"
+        },
+        {
+          "value": "drop"
+        }
+      ]
     }
   ]
 }
