ISIS-2651: fixes comment, metadata

--- a/core/config/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/core/config/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -168,7 +168,7 @@
       ]
     },
     {
-      "name": "datanucleus.schema.generatedatabase.mode",
+      "name": "datanucleus.schema.generate-database.mode",
       "values": [
         {
           "value": "none"
