ISIS-2965: antora: adding M8 migration notes

--- a/antora/playbooks/site.yml
+++ b/antora/playbooks/site.yml
@@ -293,7 +293,7 @@ asciidoc:
     kroki-fetch-diagram: true
     kroki-server-url: https://kroki.io # (default)
     page-isisprev: "2.0.0-M7"
-    page-isisrel: "2.0.0-RC1"
+    page-isisrel: "2.0.0-M8"
 
 output:
   dir: antora/target/site
