--- a/core/pom.xml
+++ b/core/pom.xml
@@ -983,6 +983,12 @@
 				<artifactId>shiro-web</artifactId>
 				<version>${shiro.version}</version>
 			</dependency>
+			
+			<dependency>
+				<groupId>org.jsoup</groupId>
+				<artifactId>jsoup</artifactId>
+				<version>${jsoup.version}</version>
+			</dependency>
 
 			<dependency>
 				<groupId>com.vaadin</groupId>
