ISIS-3002: adds jdo impl for ExecutionLogEntry
also:
* adds UUID as type/attribute converter; simplify persistence model for CommandLogEntry and ExecutionLogEntry
* rationalize imports for both command log and execution log (in modules)
* copies over some useful scripts
* adds timeline extension

--- a/extensions/core/executionlog/persistence-jdo/pom.xml
+++ b/extensions/core/executionlog/persistence-jdo/pom.xml
@@ -50,7 +50,7 @@
 
 	    <dependency>
 	        <groupId>org.apache.isis.extensions</groupId>
-	        <artifactId>isis-extensions-commandlog-applib</artifactId>
+	        <artifactId>isis-extensions-executionlog-applib</artifactId>
 	    </dependency>
 
         <!-- PERSISTENCE -->
@@ -73,6 +73,10 @@
 			<artifactId>isis-testing-integtestsupport-applib</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.isis.extensions</groupId>
+            <artifactId>isis-extensions-executionlog-applib</artifactId>
+        </dependency>
 
     </dependencies>
 
