--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.deploy.skip>true</maven.deploy.skip> <!-- don't deploy the aggregator -->
+
+		<maven-timeline.version>1.6</maven-timeline.version>
     </properties>
 
 	<scm>
@@ -38,6 +40,16 @@
 		<url>https://github.com/apache/isis.git</url>
 		<tag>HEAD</tag>
 	</scm>
+
+	<build>
+		<extensions>
+			<extension>
+				<groupId>io.takari.maven</groupId>
+				<artifactId>maven-timeline</artifactId>
+				<version>${maven-timeline.version}</version>
+			</extension>
+		</extensions>
+	</build>
 
 	<profiles>
 
@@ -126,7 +138,7 @@
 				<module>tooling</module>
 			</modules>
 		</profile>
-		
+
 		<profile>
 			<id>module-all-except-kroviz</id>
 			<activation>
@@ -137,14 +149,14 @@
 			<modules>
 				<module>antora</module>
 				<module>examples/demo</module>
-				
+
 				<!-- incubator, without kroviz -->
 				<module>incubator/viewers/graphql</module>
 				<module>incubator/viewers/javafx</module>
 				<module>incubator/viewers/vaadin</module>
 				<module>valuetypes/prism/vaadin</module>
 				<module>valuetypes/asciidoc/ui/vaadin</module>
-				
+
 				<module>regressiontests</module>
 				<module>tooling</module>
 			</modules>
