ISIS-3002: fixes demo app dependencies (2)

--- a/examples/demo/domain/pom.xml
+++ b/examples/demo/domain/pom.xml
@@ -81,6 +81,11 @@
 			<artifactId>isis-testing-h2console-ui</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.isis.valuetypes</groupId>
+			<artifactId>isis-valuetypes-sse-applib</artifactId>
+		</dependency>
+
 
 		<!-- JDO specific -->
 		<dependency>
